--- a/Block_Ref1.html
+++ b/Block_Ref1.html
@@ -1,213 +1,228 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Block_Ref1.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <style> html { scroll-behavior: smooth; } </style>
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Block_Ref1.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<style>
+		html {
+			scroll-behavior: smooth;
+		}
+	</style>
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
-    }
-  </style>
+	<style>
+		body {
+			margin: 0;
+			font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
+		}
+	</style>
 
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="ref1.css">
-  <link rel="stylesheet" href="ref-ovl.css">
+	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="ref1.css">
+	<link rel="stylesheet" href="ref-ovl.css">
 
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
 </head>
+
 <body>
-  <div id="Ref1-div-src">
-    <div id="id-Block_Ref1" style="scroll-margin-top: 80px;"></div>
-    <div class="ref1-body">
-      <div class="ref1-animate-line"></div>
-        <h2 lang-code="07013">.Automobilový priemysel</h2>
-        <p lang-code="07014">.Plne automatizované bunky a linky pre automobilový priemysel</p>
-      <div class="ref-ovl-grid">
+	<div id="Ref1-div-src">
+		<div id="id-Block_Ref1" style="scroll-margin-top: 80px;"></div>
+		<div class="ref1-body">
+			<div class="ref1-animate-line"></div>
+			<div class="ref1-header">
+				<div class="ref1-line-with-img">
+					<h2 lang-code="07013">.Automobilový priemysel</h2>
+					<img src="media/car-icon.png" alt="Ikona auta">
+				</div>
+				<p lang-code="07014">.Plne automatizované bunky a linky pre automobilový priemysel</p>
+			</div>
+			<div class="ref-ovl-grid">
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Audi</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>zváracie a polohovacie prípravky</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Audi</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">BMW</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>zváracie a polohovacie prípravky</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">BMW</div>
+					</div>
+				</div>
 
-		<div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj automobilových komponentov</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">EDAG</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>vývoj automobilových komponentov</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">EDAG</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>podvozky a prevodové ústrojenstvo</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Magna Steyr</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>podvozky a prevodové ústrojenstvo</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Magna Steyr</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>výrobné zariadenia pre automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">TMS - Turnkey manufacturing systems</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>výrobné zariadenia pre automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">TMS - Turnkey manufacturing systems</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Audi</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>zváracie a polohovacie prípravky</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Audi</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/ford-logo-transp.png" alt="Ford logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Ford</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/ford-logo-transp.png" alt="Ford logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Ford</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/honda-logo-transp.png" alt="Honda logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Honda</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/honda-logo-transp.png" alt="Honda logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Honda</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/mercedes-benz-logo-transp.png" alt="Mercedes-Benz logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Mercedes-Benz</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/mercedes-benz-logo-transp.png" alt="Mercedes-Benz logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Mercedes-Benz</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/mini-logo-transp.png" alt="Mini logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Mini</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/mini-logo-transp.png" alt="Mini logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Mini</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/porsche-logo-transp.png" alt="Porsche logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Porsche</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/porsche-logo-transp.png" alt="Porsche logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Porsche</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/rolls-royce-logo-transp.png" alt="Rolls royce logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Rolls royce</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/rolls-royce-logo-transp.png" alt="Rolls royce logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Rolls royce</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/volkswagen-logo-transp.png" alt="Volkswagen logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Volkswagen</div>
-          </div>
-        </div>
-
-
-
-
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/volkswagen-logo-transp.png" alt="Volkswagen logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>automobilový priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Volkswagen</div>
+					</div>
+				</div>
 
 
-        <!-- <div class="ref-ovl-item-wrap">
+
+
+
+
+				<!-- <div class="ref-ovl-item-wrap">
           <div class="ref-ovl-item">
             <img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-ovl-image" />
             <div class="ref-ovl-overlay">
@@ -350,7 +365,7 @@
           </div>
         </div>
  -->
-        <!-- <div class="ref-ovl-item-wrap">
+				<!-- <div class="ref-ovl-item-wrap">
           <div class="ref-ovl-item">
             <img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
             <div class="ref-ovl-overlay">
@@ -519,18 +534,19 @@
           </div>
         </div> -->
 
-      </div>
-    </div>
-   </div>
+			</div>
+		</div>
+	</div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      // Načítanie prekladov po načítaní DOM
-      await LoadTranslations('translations07-ref.txt');
-      await UpdateTexts();
-      Animator.registerAll(".ref3-animate-line", "animate-width-grow");
-    });
-  </script>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			// Načítanie prekladov po načítaní DOM
+			await LoadTranslations('translations07-ref.txt');
+			await UpdateTexts();
+			Animator.registerAll(".ref3-animate-line", "animate-width-grow");
+		});
+	</script>
 
-  </body>
+</body>
+
 </html>
