--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -35,8 +35,13 @@
 		<div id="id-Block_Ref2" style="scroll-margin-top: 80px;"></div>
 		<div class="ref2-body">
 			<div class="ref2-animate-line"></div>
-			<h2 lang-code="07011">.Letecký priemysel</h2>
-			<p lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</p>
+			<div class="ref2-header">
+				<div class="ref4-line-with-img">
+					<h2 lang-code="07011">.Letecký priemysel</h2>
+					<img src="media/Lietadielko.png" alt="Ikona lietadla">
+				</div>
+				<p lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</p>
+			</div>
 			<div class="ref-ovl-grid">
 				<!-- 1. stvorica -->
 				<div class="ref-ovl-item-wrap">
