--- a/Block_Ref3.html
+++ b/Block_Ref3.html
@@ -1,186 +1,202 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Block_Ref3.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <style> html { scroll-behavior: smooth; } </style>
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Block_Ref3.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<style>
+		html {
+			scroll-behavior: smooth;
+		}
+	</style>
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
-    }
-  </style>
+	<style>
+		body {
+			margin: 0;
+			font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
+		}
+	</style>
 
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="ref3.css">
-  <link rel="stylesheet" href="ref-ovl.css">
+	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="ref3.css">
+	<link rel="stylesheet" href="ref-ovl.css">
 
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
 </head>
+
 <body>
-  <div id="Ref3-div-src">
-    <div id="id-Block_Ref3" style="scroll-margin-top: 80px;"></div>
-    <div class="ref3-body">
-      <div class="ref3-animate-line"></div>
-      <h2 lang-code="07017">.Všeobecné strojárstvo</h2>
-      <p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
-      <div class="ref-ovl-grid">
+	<div id="Ref3-div-src">
+		<div id="id-Block_Ref3" style="scroll-margin-top: 80px;"></div>
+		<div class="ref3-body">
+			<div class="ref3-animate-line"></div>
+				<div class="ref3-header">
+					<div class="ref4-line-with-img">
+					<h2 lang-code="07017">.Všeobecné strojárstvo</h2>
+					<img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
+				</div>
+				<p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
+			</div>
+			<div class="ref-ovl-grid">
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">.Realizované služby:</strong></p>
-              <p>strojárstvo</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">CAT</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">.Realizované služby:</strong></p>
+							<p>strojárstvo</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">CAT</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/daikin-logo-modra.png" alt="DAIKIN logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>klimatizačné jednotky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">DAIKIN INDUSTRIES</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/daikin-logo-modra.png" alt="DAIKIN logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>klimatizačné jednotky</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">DAIKIN INDUSTRIES</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/hestego-logo-enitech.png" alt="HESTEGO logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>plechové komponenty</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">HESTEGO</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/hestego-logo-enitech.png" alt="HESTEGO logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>plechové komponenty</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">HESTEGO</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>turbodúchadlá</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Honeywell</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>turbodúchadlá</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Honeywell</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>CAD development design</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Chropynska</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>CAD development design</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Chropynska</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>výrobné zariadenia pre gumárenský priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">KONŠTRUKTA</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>výrobné zariadenia pre gumárenský priemysel</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">KONŠTRUKTA</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>stroje na výrobu plastových komponentov</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">KraussMaffei</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>stroje na výrobu plastových komponentov</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">KraussMaffei</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/mce-logo-transp.png" alt="MCE logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>steel structures and plant engineering</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">MCE part of the family HABAU GROUP</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/mce-logo-transp.png" alt="MCE logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>steel structures and plant engineering</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">MCE part of the family HABAU GROUP</div>
+					</div>
+				</div>
 
-		<div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">.Realizované služby:</strong></p>
-              <p>výťahy a eskalátory</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Schindler</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo"
+							class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">.Realizované služby:</strong></p>
+							<p>výťahy a eskalátory</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Schindler</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Škoda Auto</div>
-          </div>
-        </div>
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>zváracie a polohovacie prípravky</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Škoda Auto</div>
+					</div>
+				</div>
 
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>Beratung und Technologie</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Tagueri</div>
-          </div>
-        </div>
-
-
-
+				<div class="ref-ovl-item-wrap">
+					<div class="ref-ovl-item">
+						<img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-ovl-image" />
+						<div class="ref-ovl-overlay">
+							<p><strong lang-code="07005">Realizované služby:</strong></p>
+							<p>Beratung und Technologie</p>
+						</div>
+					</div>
+					<div class="ref-ovl-company-item">
+						<div class="ref-ovl-company">Tagueri</div>
+					</div>
+				</div>
 
 
-        <!-- <div class="ref-ovl-item-wrap">
+
+
+
+				<!-- <div class="ref-ovl-item-wrap">
           <div class="ref-ovl-item">
             <img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
             <div class="ref-ovl-overlay">
@@ -349,18 +365,19 @@
           </div>
         </div> -->
 
-      </div>
-    </div>
-   </div>
+			</div>
+		</div>
+	</div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      // Načítanie prekladov po načítaní DOM
-      await LoadTranslations('translations07-ref.txt');
-      await UpdateTexts();
-      Animator.registerAll(".ref3-animate-line", "animate-width-grow");
-    });
-  </script>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			// Načítanie prekladov po načítaní DOM
+			await LoadTranslations('translations07-ref.txt');
+			await UpdateTexts();
+			Animator.registerAll(".ref3-animate-line", "animate-width-grow");
+		});
+	</script>
 
-  </body>
+</body>
+
 </html>
