--- a/Block_Ref4.html
+++ b/Block_Ref4.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Block_Ref3.html</title>
+	<title>Block_Ref4.html</title>
 	<link rel="icon" href="favicona-enitech.png">
 	<style>
 		html {
@@ -35,8 +35,13 @@
 		<div id="id-Block_Ref4" style="scroll-margin-top: 80px;"></div>
 		<div class="ref4-body">
 			<div class="ref4-animate-line"></div>
-			<h2 lang-code="07015">.IT oblasť</h2>
-			<p lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</p>
+			<div class="ref4-header">
+				<div class="ref4-line-with-img">
+					<h2 lang-code="07015">.IT oblasť</h2>
+					<img src="media/computer-icon.png" alt="Ikona pocitaca">
+				</div>
+				<p lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</p>
+			</div>
 			<div class="ref-ovl-grid">
 				<div class="ref-ovl-item-wrap">
 					<div class="ref-ovl-item">
